# impruver

./: .dockerignore  .gitignore  Dockerfile  README.en.md  README.md  README.zh.md  compose_dataset.py  docker-compose.yml  infer_transformer.py  pyproject.toml  requirements.txt  test.py  train_transformers.py
.github/workflows/: sync-docs-to-wiki.yml
configs/: nanoGPT_full.yaml  nanoGPT_full_alpaca.yaml  ruGPT35_13B_cot_lora.yml  ruGPT35_13B_fc_lora.yaml  ruGPT35_13B_fc_lora.yml  ruGPT35_13B_fcot_lora.yml  ruGPT35_13B_lora.yaml  ruGPT35_13B_lora.yml  ruGPT35_13B_lora_fcot.yaml  ruGPT35_13B_lora_saiga2.yaml  rugpt3large_fc_full.yaml  rugpt3large_full.yaml  rugpt3large_full_fc.yaml  rugpt3large_lora.yaml  rugpt3large_lora_fc.yaml  rugpt3large_lora_saiga2.yaml  rugpt3medium_full.yaml  rugpt3medium_full_fc.yaml  rugpt3medium_full_saiga2.yaml  rugpt3small_based_on_gpt2.yaml  rugpt3small_fc_full.yaml  rugpt3small_full.yaml  rugpt3small_full_fc.yaml  rugpt3small_full_toxicator.yaml  rugpt3small_lora.yaml  zephyr_7B_lora_python-ru.yaml  zephyr_7b_lora_python-ru.yaml
custom/gigachat/: __init__.py  configuration_deepseek.py  modelling_deepseek.py
custom/llama/: 110M_full_alpaca.yaml  README.md  REAME.md  __init__.py  modeling_llama.py  module.py
docs/: Home.md  configuration.md  convert_function.md  converter.md  Конвертер.md  Конфигурация.md  Обучение.md  Рецепты.md
impruver/: __init__.py  _recipe_registry.py  cli.py  config.py
impruver/_cli/: _parser.py  compose_dataset.py  copy.py  cp.py  download.py  impruver.py  inference_transformers.py  list.py  ls.py  run.py  subcommand.py
impruver/cli/: _command_interface.py
impruver/conversation/: __init__.py  chat_history.py  generate.py  get_prompt.py
impruver/converters/: __init__.py  bot_messages_to_messages.py  char_dialog_to_messages.py  conversations_to_messages.py  dialog_to_messages.py  instruction_to_messages.py  reasoning_to_messages.py
impruver/data/: __init__.py  _message.py  _strategies.py  _tokenizer.py  apply_chat_template.py  convert_functions.py  message.py  strategies.py  tokenizer.py  validate_messages.py
impruver/dataset/: __init__.py  _chat_dataset.py  chat_dataset.py  raw_dataset.py
impruver/datasets/: _chat_dataset.py
impruver/memory/: chat_history.py
impruver/utils/: __init__.py  dynamic_import.py  get_device.py  get_dtype.py  get_logger.py  set_seed.py
impruver/utils/metric_logging/: __init__.py  disk_logger.py  metric_logger_interface.py  stdout_logger.py
legacy/: rugpt3small_inference.py  rugpt3small_inference_fattn.py  rugpt3small_train.py  rugpt3small_train_fattn.py  rugpt3xl_inference.py
recipes/: _eval_interface.py  _train_interface.py  chat_transformers.py  compose_dataset.py  convert_gguf.py  finetune_transformers.py  finetune_unsloth.py  lora_single_device.py
recipes/configs/: lora_rugpt3small.yml
recipes/configs/GigaChat/: 20B-A3B_lora_o1.yaml  README.md
recipes/configs/T-lite-it/: 7B_lora_thinking.yaml  README.md
recipes/configs/YandexGPT/: 8B_lora_r1.yaml  README.md
recipes/configs/nanoGPT/: 30M_full_alpaca.yaml
recipes/configs/ruGPT-3.5/: 13B_lora_cot.yaml  13B_lora_fc.yaml  13B_lora_fcot.yaml  13B_lora_saiga2.yaml  README.md
recipes/configs/rugpt3large/: 760M_full_fc.yaml  760M_full_saiga2.yaml  760M_lora_saiga2.yaml  README.md
recipes/configs/rugpt3medium/: 457M_full_fc.yaml  README.md
recipes/configs/rugpt3small/: 125M_full_saiga2.yaml  125M_full_toxicator.yaml  125M_lora_saiga2.yaml  README.md
recipes/configs/zephyr/: README.md
tests/impruver/: test_config.py
tests/impruver/data/: test_apply_chat_template.py  test_strategies.py
tests/impruver/dataset/: _test.json  _test.jsonl  test.json  test_chat_dataset.py
