[project]
name = "impruver"
description = "Transformer based LLM trainer"
authors = [
    { name = "Pavel Rykov", email = "paul@drteam.rocks" },
]
keywords = ["pytorch", "finetuning", "llm"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fire>=0.6.0",
    "pydantic>=2.7.3",
    "ruamel.yaml>=0.18.6",
    # Hugging Face integrations
    "torch>=2.3.1",
    "datasets>=2.19.2",
    "transformers>=4.41.2",
    "huggingface_hub>=0.23.3",
    "safetensors",
    # Tokenization
    "sentencepiece",
    "tiktoken",
    "blobfile>=2",
    "tokenizers",
    # Miscellaneous
    "tqdm",
    # Quantization
    "bitsandbytes>=0.43.0",
    "peft>=0.11.1",
    "accelerate>=0.31.0"
]
dynamic = ["version"]

[project.scripts]
impruver = "impruver.cli:main"

[project.optional-dependencies]
dev = [
    "flash-attn>=2.5.8",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-integration",
    "tensorboard",
    "wandb",
    "evaluate",
    "scikit-learn",
    "accelerate",
]

[tool.setuptools.dynamic]
version = { attr = "impruver.__version__" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["impruver*", "recipes*"]

[tool.setuptools.package-data]
recipes = ["configs/*.yaml", "configs/*/*.yaml"]

#[tool.pytest.ini_options]
#addopts = ["--showlocals", "--import-mode=prepend", "--without-integration", "--without-slow-integration"]
#addopts = ["--showlocals", "--import-mode=prepend"]
