[project]
name = "impruver"
description = "Transformer based LLM trainer"
authors = [
    { name = "Pavel Rykov", email = "paul@drteam.rocks" },
]
keywords = ["pytorch", "finetuning", "llm"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core
    "pydantic>=2.9.2",
    "pyyaml>=6.0.2",
    "jsonlines>=4.0.0",
    "fire>=0.6.0",
    # Hugging Face integrations
    "torch>=2.4.1",
    "datasets>=3.0.1",
    "transformers>=4.45.1",
    "huggingface-hub>=0.25.1",
    "safetensors>=0.4.5",
    # Tokenization
    "tokenizers>=0.20.0",
    # Miscellaneous
    "tqdm>=4.66.5",
    # Quantization
    "bitsandbytes>=0.44.0",
    "peft>=0.13.0",
    "accelerate>=0.34.2"
]
dynamic = ["version"]

#[project.scripts]
#impruver = "impruver.cli:main"

[project.optional-dependencies]
dev = [
    "wandb>=0.18.2",
    "tiktoken>=0.7.0",
    "mmh3>=5.0.1",
]

[tool.setuptools.dynamic]
version = { attr = "impruver.__version__" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [""]
include = ["impruver*"]

[tool.setuptools.package-data]
recipes = ["configs/*.yaml", "configs/*/*.yaml"]

#[tool.pytest.ini_options]
#addopts = ["--showlocals", "--import-mode=prepend", "--without-integration", "--without-slow-integration"]
#addopts = ["--showlocals", "--import-mode=prepend"]
